Changed security configuration